--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,64 +4,134 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main"
     tools:context="coc.helloworld.MainActivity"
     android:orientation="vertical"
     android:padding="20dp">
 
+    <!--Barb-->
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/layout_height"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="@dimen/unit_name_width"
             android:layout_height="wrap_content"
-            android:text="@string/barbarian"
+            android:text="@string/goblin"
             android:paddingRight="10dp"/>
+
         <Spinner
-            android:id="@+id/spinnerBarb"
+            android:id="@+id/spinnerGoblinAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"/>
-    </LinearLayout>
+            android:spinnerMode="dropdown"
+            android:dropDownWidth="75dp"
+            android:gravity="center"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/barbarian"
-            android:paddingRight="10dp"/>
         <Spinner
-            android:id="@+id/spinnerArcher"
+            android:id="@+id/spinnerGoblinLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"/>
+            android:spinnerMode="dropdown"
+            android:dropDownWidth="75dp"
+            android:gravity="center"/>
     </LinearLayout>
 
+    <!--Archer-->
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/layout_height"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="@dimen/unit_name_width"
             android:layout_height="wrap_content"
-            android:text="@string/barbarian"
+            android:text="@string/archer"
             android:paddingRight="10dp"/>
+
         <Spinner
-            android:id="@+id/spinnerGiant"
+            android:id="@+id/spinnerArcherAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"/>
+            android:spinnerMode="dropdown"
+            android:dropDownWidth="75dp"
+            android:gravity="center"/>
+
+        <Spinner
+            android:id="@+id/spinnerArcherLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:dropDownWidth="75dp"
+            android:gravity="center"/>
     </LinearLayout>
 
+    <!--Giant-->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/layout_height"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="@dimen/unit_name_width"
+            android:layout_height="wrap_content"
+            android:text="@string/giant"
+            android:paddingRight="10dp"/>
+
+        <Spinner
+            android:id="@+id/spinnerGiantAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:dropDownWidth="75dp"
+            android:gravity="center"/>
+
+        <Spinner
+            android:id="@+id/spinnerGiantLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:dropDownWidth="75dp"
+            android:gravity="center"/>
+    </LinearLayout>
+
+    <!--Giant-->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/layout_height"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="@dimen/unit_name_width"
+            android:layout_height="wrap_content"
+            android:text="@string/giant"
+            android:paddingRight="10dp"/>
+
+        <Spinner
+            android:id="@+id/spinnerGiantAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:dropDownWidth="75dp"
+            android:gravity="center"/>
+
+        <Spinner
+            android:id="@+id/spinnerGiantLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:dropDownWidth="75dp"
+            android:gravity="center"/>
+    </LinearLayout>
+
+    <!--Total Cost and Calc buttons-->
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -69,7 +139,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/totalCost"
+            android:text="@string/total_cost"
             android:paddingRight="10dp"/>
 
         <TextView
@@ -77,12 +147,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
-
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnCalculate"
-        android:text="@string/calcbutton"
+        android:text="@string/calc_button"
         android:layout_gravity="center"/>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnReset"
+        android:text="@string/reset_button"
+        android:layout_gravity="center"
+        android:visibility="invisible"/>
 </LinearLayout>
 
